--- a/ez-client/src/main/sass/component/widget/_ClockWidget.scss
+++ b/ez-client/src/main/sass/component/widget/_ClockWidget.scss
@@ -16,7 +16,7 @@
     font-size: 250%;
   }
   &.width-xs, &.width-sm, &.width-md, &.width-lg {
-    font-size: 500%;
+    font-size: 400%;
   }
   &.height-xxxs {
     p:nth-child(2) {
