--- a/ez-client/src/main/sass/component/widget/_SprintWidget.scss
+++ b/ez-client/src/main/sass/component/widget/_SprintWidget.scss
@@ -17,11 +17,17 @@
       }
     }
   }
-}
-
-.height-xxs, .height-xs, .height-sm, .height-md, .height-lg {
-  &.widget.sprint article {
-    padding: 1em;
+  article {
+    padding: 0;
+    & > div {
+      display: flex;
+      flex-grow: 1;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      padding: 2rem;
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+    }
   }
 }
-
